[tool.poetry]
name = "conctl"
version = "0.0.1"
description = "Drive Containerd and Docker from one CLI"
authors = ["Joe Borg <joe@josephb.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
